--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,10 @@
     name: "{{ item }}"
     state: installed
   with_items: "{{ keepalived_packages }}"
+  register: install_packages
+  until: install_packages is success
+  retries: 5
+  delay: 2
 
 - name: 'Set configuration'
   template:
