--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,9 +1,8 @@
 ---
 # handlers file for ansible-role-openio-keepalived
 
-- name: reload keepalived
+- name: Reload keepalived
   service:
     name: "{{ keepalived_service_name }}"
     state: reloaded
-  when: not keepalived_provision_only
 ...
